# GoogleCloudPlatform-_-LifeSciences

./: .gitignore  README.md
applications/: README.md
applications/foldrun/: .gcloudignore  (+6 more)
applications/foldrun/foldrun-agent/: .env.example  .gcloudignore  Makefile  README.md  databases.yaml  deploy.sh  deploy_a2a.py  deploy_a2a_cloudrun.sh  deployment_metadata_a2a.json  main.py  pyproject.toml  register_a2a_gemini.sh  requirements.txt  test_a2a.py
applications/foldrun/foldrun-agent/foldrun_app/: __init__.py  a2a_app.py  a2a_executor.py  agent.py  agent_engine_app.py  cli.py
applications/foldrun/foldrun-agent/foldrun_app/app_utils/: .requirements.txt  deploy.py  gcs.py  telemetry.py  typing.py
applications/foldrun/foldrun-agent/foldrun_app/core/: base_tool.py  batch.py  config.py  download.py  fasta.py  hardware.py  model_registry.py  pipeline_utils.py  vertex_utils.py
applications/foldrun/foldrun-agent/foldrun_app/models/af2/: __init__.py  base.py  config.py  startup.py
applications/foldrun/foldrun-agent/foldrun_app/models/af2/data/: alphafold_tools.json
applications/foldrun/foldrun-agent/foldrun_app/models/af2/pipeline/: __init__.py  config.py
applications/foldrun/foldrun-agent/foldrun_app/models/af2/tools/: __init__.py  alphafold_db_tools.py  analyze.py  analyze_job.py  analyze_job_deep.py  check_database_download.py  check_gpu_quota.py  cleanup_gcs_files.py  delete_job.py  download_all_databases.py  download_database.py  find_orphaned_gcs_files.py  get_analysis_results.py  get_job_details.py  get_results.py  job_status.py  list_jobs.py  open_viewer.py  submit_batch.py  submit_monomer.py  submit_multimer.py  visualize.py
applications/foldrun/foldrun-agent/foldrun_app/models/af2/utils/: __init__.py  alphafold_db.py  fasta_utils.py  fasta_validator.py  pipeline_dws_injector.py  pipeline_utils.py  vertex_utils.py  viz_utils.py
applications/foldrun/foldrun-agent/foldrun_app/models/boltz2/: __init__.py  base.py  config.py  startup.py
applications/foldrun/foldrun-agent/foldrun_app/models/boltz2/data/: boltz2_tools.json
applications/foldrun/foldrun-agent/foldrun_app/models/boltz2/pipeline/: __init__.py  config.py
applications/foldrun/foldrun-agent/foldrun_app/models/of3/: __init__.py  base.py  config.py  startup.py
applications/foldrun/foldrun-agent/foldrun_app/skills/: __init__.py  _tool_registry.py
applications/foldrun/foldrun-agent/foldrun_app/skills/cost_estimation/: __init__.py  pricing.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/skills/database_queries/: __init__.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/skills/job_management/: __init__.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/skills/job_submission/: __init__.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/skills/results_analysis/: __init__.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/skills/storage_management/: __init__.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/skills/visualization/: __init__.py  tools.py
applications/foldrun/foldrun-agent/foldrun_app/utils/: __init__.py
applications/foldrun/foldrun-agent/scripts/: setup_data.py
applications/foldrun/foldrun-agent/sequences/: covid_spike.fasta
applications/foldrun/foldrun-agent/tests/: .env.test  TESTING.md  __init__.py  conftest.py
applications/foldrun/foldrun-agent/tests/integration/: conftest.py  test_conversation_flow.py  test_response_quality.py  test_tool_routing.py
applications/foldrun/foldrun-agent/tests/unit/: conftest.py  test_agent.py  test_config.py  test_download.py  test_fasta.py  test_mmseqs2.py  test_pipeline.py  test_skills.py  test_submit_service_account.py  test_tool_registry.py
applications/foldrun/src/foldrun-a2a/: .env.example  .gcloudignore  Dockerfile  a2a_agent_card.py  cloudbuild.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt  test_a2a.py  test_grpc_server.py
applications/foldrun/src/foldrun-analysis-job/: Dockerfile  pyproject.toml
applications/foldrun/src/foldrun-analysis-job/foldrun_analysis/: af2_analyzer.py  boltz2_analyzer.py  of3_analyzer.py  shared_utils.py
applications/foldrun/src/foldrun-analysis-job/tests/: test_shared_utils.py
applications/pharma-on-gemini-enterprise/model-garden-on-gemini-enterprise/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
applications/pharma-on-gemini-enterprise/model-garden-on-gemini-enterprise/model_garden_agent/: README.md  agent.py  requirements.txt
applications/pharma-on-gemini-enterprise/model-garden-on-gemini-enterprise/terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
applications/pharma-on-gemini-enterprise/model-garden-on-gemini-enterprise/terraform/modules/model_garden_agent/: main.tf  outputs.tf  variables.tf
applications/sentinel/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
applications/sentinel/api/: config.py
applications/sentinel/api/models/: schemas.py
applications/sentinel/api/routes/: analysis.py
applications/sentinel/api/services/: analyzer_service.py  gemini_client.py
applications/sentinel/api/services/prompts/: image_analysis_single_step.md  image_analysis_without_location.md  video_analysis.md
applications/sentinel/examples/rules/: example_rules.txt
applications/sentinel/frontend/: package-lock.json  package.json  viewer.html
applications/sentinel/frontend/src/: viewer-main.tsx
applications/sentinel/frontend/src/components/: Sidebar.tsx
applications/sentinel/frontend/src/types/: index.ts
applications/sentinel/frontend/src/viewer/: ImageWithBboxes.tsx  ReportViewer.tsx  types.ts
applications/sentinel/sentinel_agent/: __init__.py  agent.py  prompts.py  schemas.py
applications/sentinel/sentinel_agent/prompts/: critic_merger.md  dedupe_critic.md  editorial_reviewer.md  gap_critic.md  intake.md  legal_reviewer.md  loop_decider.md  medical_reviewer.md  regulatory_reviewer.md  root.md  rules_reviewer.md  severity_critic.md  submitter_advocate.md  synthesizer.md
applications/sentinel/tests/: test_config.py
(+109 files in other folders)
