[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Content analysis starter code to support pharmaceutical regulatory affairs and marketing teams"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Sentinel Contributors" }
]
keywords = ["pharmaceutical", "ai", "youtube", "gemini", "advertisement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: pharmaceutical.",
]
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "google-genai>=1.56.0",
    "google-adk>=1.32.0,<2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pillow>=12.0.0",
    "google-cloud-storage>=2.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[project.urls]
Homepage = "https://github.com/GoogleCloudPlatform/LifeSciences"
Documentation = "https://github.com/GoogleCloudPlatform/LifeSciences#readme"
Repository = "https://github.com/GoogleCloudPlatform/LifeSciences"
Issues = "https://github.com/GoogleCloudPlatform/LifeSciences/issues"

[tool.setuptools]
packages = ["api", "sentinel_agent"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line length
]
