[project]
name = "foldrun-a2a"
version = "0.1.0"
description = "FoldRun A2A Proxy"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0,<1.2.0",
    "google-cloud-aiplatform[agent_engines]>=1.143.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
