[project]
name = "foldrun-analysis"
version = "0.1.0"
description = "FoldRun Prediction Post-Processing and Scoring Analysis Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=3.0.0",
    "google-cloud-aiplatform>=1.85.0",
    "google-genai>=1.0.0",
    "numpy>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pyyaml>=6.0",
    "jax[cpu]==0.10.1",
    "dm-tree>=0.1.9",
]

[project.scripts]
foldrun-analysis = "foldrun_analysis.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"